# DeskXiuxianPet

./: CMakeLists.txt  README.md  img.qrc  imgs.qrc  main.cpp  widget.cpp  widget.h
business/: db_manage.cpp  db_manage.h  progress_manage.cpp  progress_manage.h  role_manage.cpp  role_manage.h
filedata/: role_db.h
logger/: logger.h
progress/: progress_service.cpp  progress_service.h
public/: public_enum.h  public_func.cpp  public_func.h  public_macro.h
role/: role_player.cpp  role_player.h
widget/: pet_widget.cpp  pet_widget.h
